# VulnSage

./: README.md  cve-list.txt
frontend/: Dockerfile  cli.py  docker-compose.yaml  pyproject.toml  sage.py
frontend/agentscope/agents/: react_agent.py
frontend/agentscope/service/: service_toolkit.py
frontend/common/: __init__.py  exceptions.py  hacker_detection.py  request_llm.py  service.py  util.py  vulnsage_react_agents.py
frontend/configs/: __init__.py  agent_config.json  config.py  context.py  knowledge_config.json  log_config.py  model_config.json
frontend/feeder/: __init__.py  scan_feeder.py
frontend/feeder/java_demo/: org.quartz-scheduler:quartz-jobs:2.4.0_result.json
frontend/feeder/js_demo/: mpath@0.4.1_result.json
frontend/prompting/: __init__.py  prompt_template_loader.py
frontend/prompting/prompts/java/command_injection/: code_generate_code_audit.system.html  code_generate_code_audit.user.html  code_generate_with_last_reason.user.html  code_generate_without_last_reason.user.html  init_script.system.html
frontend/prompting/prompts/java/common/: clean_fail_reason.user.html  find_sanitizer.system.html  find_sanitizer.user.html
frontend/prompting/prompts/java/jndi/: code_generate_code_audit.user.html  code_generate_with_last_reason.user.html  code_generate_without_last_reason.system.html  code_generate_without_last_reason.user.html  init_script.user.html
frontend/prompting/prompts/nodejs/code_injection/: init_script.user.html  (+4 more)
frontend/sage4j/: __init__.py  agent.py  service.py
frontend/sage4js/: __init__.py  agent.py  service.py
(+81 files in other folders)
