[project]
name = "typescriptagentv2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
source-directory = "src"
dependencies = [
    "json5",
    "jsonschema",
    "networkx",
    "black",
    "docstring_parser",
    "pydantic",
    "loguru==0.6.0",
    "tiktoken",
    "Pillow",
    "requests",
    "inputimeout",
    "numpy",
    "flask_sqlalchemy",
    "python-socketio",
    "flake8",
    "psutil",
    "shortuuid",
    "scipy",
    "openai>=1.3.0",
    "dashscope>=1.19.0",
    "nest_asyncio",
    "flask_cors",
    "flask_socketio",
    "dotenv"
]
